[package]
name = "cpe_explorer"
version = "0.1.0"
edition = "2021"
authors = ["darakian"]
description = "An exploration tool for the NVD cpe dict"
readme = "README.md"
homepage = "https://github.com/darakian/cpe_explorer"
repository = "https://github.com/darakian/cpe_explorer"
license-file = "LICENSE"

[dependencies]
roxmltree = "0.20.0"
rayon = "1.10.0"
clap = { version = "4.5.18", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
regex = "1.11.0"
flate2 = "1.0.34"
